[-] * adds aggregation of logs