@@ -1,5 +1,6 @@
 package pt.raidline.api.fuzzy.logging;
 
+import java.util.Objects;
 import java.util.logging.ConsoleHandler;
 import java.util.logging.Formatter;
 import java.util.logging.Level;
@@ -37,21 +38,46 @@ public final class CLILogger {
     }
 
     public static void severe(String message, Object... params) {
-        LOGGER.log(Level.SEVERE, () -> String.format(message, params));
+        var caller = getCallerInfo();
+        LOGGER.log(Level.SEVERE, () ->
+                formatStringForPrinting(caller.className, caller.lineNumber, String.format(message, params)));
     }
 
     public static void info(String message, Object... params) {
-        LOGGER.log(Level.INFO, () -> String.format(message, params));
+        var caller = getCallerInfo();
+        LOGGER.log(Level.INFO, () -> formatStringForPrinting(caller.className, caller.lineNumber, String.format(message, params)));
     }
 
     public static void debug(String message, Object... params) {
         if (DEBUG_MODE) {
-            LOGGER.log(Level.CONFIG, () -> String.format(message, params));
+            var caller = getCallerInfo();
+            LOGGER.log(Level.CONFIG, () -> formatStringForPrinting(caller.className, caller.lineNumber, String.format(message, params)));
         }
     }
 
     public static void warn(String message, Object... params) {
-        LOGGER.log(Level.WARNING, () -> String.format(message, params));
+        var caller = getCallerInfo();
+        LOGGER.log(Level.WARNING, () -> formatStringForPrinting(caller.className, caller.lineNumber, String.format(message, params)));
+    }
+
+    private static String formatStringForPrinting(Object... params) {
+        var className = (String) params[0];
+        var lineNumber = (int) params[1];
+        var message = (String) params[2];
+
+        return "[%s:%d] %s".formatted(className, lineNumber, message);
+    }
+
+    private static CallerInfo getCallerInfo() {
+        return StackWalker.getInstance()
+                .walk(frames -> frames
+                        .filter(f -> !f.getClassName().equals(CLILogger.class.getName()))
+                        .findFirst()
+                        .map(f -> new CallerInfo(f.getClassName().substring(f.getClassName().lastIndexOf('.') + 1), f.getLineNumber()))
+                        .orElse(new CallerInfo("Unknown", 0)));
+    }
+
+    private record CallerInfo(String className, int lineNumber) {
     }
 
     private static class ColoredFormatter extends Formatter {
